# xtest-data

./: Cargo.toml  Readme.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: git.rs  lib.rs
tests/: integration.rs
xtask/: Cargo.toml  Readme.md
xtask/src/: args.rs  main.rs  pack.rs  target.rs  task.rs  util.rs
xtask/src/task/: artifacts.rs  dl.rs  output.rs  pack.rs  pack_archive.rs  test.rs
