[package]
name = "xtest-data"
version = "1.0.0-beta.2"
description = "Fetch auxiliary test data when testing published crates"
license = "MIT OR Apache-2.0 OR Zlib"
edition = "2018"
rust-version = "1.53"
repository = "https://github.com/HeroicKatora/xtest-data"
exclude = [".github", "tests/data.zip"]

[dependencies.tinyjson]
version = "2"
[dependencies.fs2]
version = "0.4.3"
[dependencies.which]
version = "4.2"
[dependencies.nanorand]
version = "0.6.1"
default-features = false
features = ["std", "tls", "wyrand"]

[workspace]
members = [".", "xtask"]
